# sie_countdown

./: CMakeLists.txt
src/: countdown.c  countdown.h  ipc.c  ipc.h  main.c
src/ui/: edit.c  edit.h  icons.h  timer.c  timer.h  ui.c  ui.h
